Refactoring, jpackage & connection with database