@@ -6,7 +6,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>HotelReservation</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.1</version>
 
     <properties>
         <maven.compiler.release>17</maven.compiler.release>
@@ -26,9 +26,20 @@
             <artifactId>javafx-fxml</artifactId>
             <version>20</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.224</version>
+        </dependency>
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -45,6 +56,47 @@
                 <configuration>
                     <mainClass>pl.emilweglowski.App</mainClass>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>Creating installer</id>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <phase>package</phase>
+                        <configuration>
+                            <executable>jpackage</executable>
+                            <arguments>
+                                <argument>--input</argument>
+                                <argument>target/</argument>
+
+                                <argument>--name</argument>
+                                <argument>HotelReservation</argument>
+
+                                <argument>--main-jar</argument>
+                                <argument>HotelReservation-1.0-SNAPSHOT.jar</argument>
+
+                                <argument>--main-class</argument>
+                                <argument>pl.emilweglowski.App</argument>
+
+                                <argument>--type</argument>
+                                <argument>msi</argument>
+
+                                <argument>--win-dir-chooser</argument>
+
+                                <argument>--module-path</argument>
+                                <argument>D:\Java\JavaFX_Windows_jmods_21.0.1</argument>
+
+                                <argument>--add-modules</argument>
+                                <argument>java.base,javafx.controls,javafx.web,javafx.graphics,javafx.media,java.desktop,javafx.fxml,jdk.charsets</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
